--- a/index.html
+++ b/index.html
@@ -229,10 +229,38 @@
 
 <section id="about">
   <div class="reveal">
+
     <div class="eyebrow">About Me</div>
-    <h2 class="section-h">AI-Powered<br>Financial Expert</h2>
-    <p class="about-p">Based in Okhaldhunga, Nepal, I blend traditional accounting expertise with cutting-edge AI to deliver next-generation financial tools and automation solutions.</p>
-    <p class="about-p">From EMI analytics dashboards to AI-driven bookkeeping engines, I focus on making complex financial processes faster, smarter, and more accessible.</p>
+<h2 class="section-h">AI-Powered<br>Financial Expert</h2>
+
+<p class="about-p">
+  Based in Okhaldhunga, Nepal 🇳🇵, I am a dedicated accountant and tech enthusiast who bridges traditional finance with modern Artificial Intelligence. With a strong foundation in accounting principles and hands-on experience in financial management, I specialize in building AI-driven tools that simplify complex financial processes for individuals, small businesses, and startups.
+</p>
+
+<p class="about-p">
+  I hold a Bachelor's degree in [Business Studies / Management / Accounting / relevant field] from Tribhuvan University (or specify your university), where I developed a deep understanding of financial reporting, taxation, auditing, and business economics. Complementing my formal education, I have pursued certifications and self-learning in:
+</p>
+
+<ul class="about-list">
+  <li>Artificial Intelligence & Machine Learning basics (via online platforms like Coursera, fast.ai, etc.)</li>
+  <li>Python programming for automation and data analysis</li>
+  <li>Digital tools & no-code/low-code platforms for financial solutions</li>
+  <li>Digital Marketing & content creation (to promote financial literacy)</li>
+</ul>
+
+<p class="about-p">
+  My professional journey includes [briefly mention experience, e.g., "working as an accountant/freelance financial consultant for X years, managing books for local businesses, preparing tax returns, and advising on EMI/loan structures"]. Passionate about Nepal's growing digital economy, I focus on creating accessible, affordable, and smart financial solutions — from interactive EMI calculators and amortization visualizers to fully automated AI bookkeeping engines that handle categorization, reconciliation, and reporting with minimal human input.
+</p>
+
+<p class="about-p">
+  What drives me? Making finance less intimidating and more efficient for everyday Nepalis — whether it's a farmer calculating loan interest, a startup tracking expenses, or a freelancer managing cash flow. Living in the beautiful hills of Okhaldhunga keeps me grounded, while technology connects me to global opportunities.
+</p>
+
+<p class="about-p">
+  I'm always open to collaborations, freelance projects, or discussions on AI + Finance innovations. Let's build something impactful together!
+</p>
+
+    
     <a href="#contact" class="btn btn-fill" style="margin-top:18px;display:inline-flex;"><i class="fas fa-handshake"></i> Work With Me</a>
   </div>
   <div class="stat-grid reveal" style="transition-delay:.15s">
