--- a/index.html
+++ b/index.html
@@ -170,6 +170,72 @@
     @media(max-width:480px){
       .hero-title{font-size:2.1rem;}
     }
+
+/* ================== TABS STYLES ================== */
+.tabs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid var(--line);
+  padding-bottom: 4px;
+}
+
+.tab-btn {
+  padding: 10px 18px;
+  background: transparent;
+  border: none;
+  border-bottom: 3px solid transparent;
+  color: var(--muted);
+  font-weight: 600;
+  font-size: 0.92rem;
+  cursor: pointer;
+  transition: all 0.3s;
+  border-radius: 8px 8px 0 0;
+}
+
+.tab-btn:hover {
+  color: white;
+  background: var(--glass);
+}
+
+.tab-btn.active {
+  color: white;
+  border-bottom: 3px solid var(--teal);
+  background: var(--glass);
+}
+
+.tab-content {
+  min-height: 180px;
+}
+
+.tab-pane {
+  display: none;
+}
+
+.tab-pane.active {
+  display: block;
+  animation: fadeIn 0.4s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to   { opacity: 1; transform: none; }
+}
+
+.about-list {
+  padding-left: 20px;
+  margin: 12px 0 18px;
+  color: var(--muted);
+}
+
+.about-list li {
+  margin-bottom: 8px;
+}
+
+
+
+    
   </style>
 </head>
 <body>
@@ -228,41 +294,67 @@
 <div class="hr"></div>
 
 <section id="about">
+
+
   <div class="reveal">
-
     <div class="eyebrow">About Me</div>
-<h2 class="section-h">AI-Powered<br>Financial Expert</h2>
+    <h2 class="section-h">AI-Powered<br>Financial Expert</h2>
 
-<p class="about-p">
-  Based in Okhaldhunga, Nepal 🇳🇵, I am a dedicated accountant and tech enthusiast who bridges traditional finance with modern Artificial Intelligence. With a strong foundation in accounting principles and hands-on experience in financial management, I specialize in building AI-driven tools that simplify complex financial processes for individuals, small businesses, and startups.
-</p>
+    <!-- Tabs Navigation -->
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="intro">Introduction</button>
+      <button class="tab-btn" data-tab="education">Education & Skills</button>
+      <button class="tab-btn" data-tab="experience">Experience</button>
+      <button class="tab-btn" data-tab="drive">My Drive</button>
+    </div>
 
-<p class="about-p">
-  I hold a Bachelor's degree in [Business Studies / Management / Accounting / relevant field] from Tribhuvan University (or specify your university), where I developed a deep understanding of financial reporting, taxation, auditing, and business economics. Complementing my formal education, I have pursued certifications and self-learning in:
-</p>
+    <!-- Tab Contents -->
+    <div class="tab-content">
+      <div id="intro" class="tab-pane active">
+        <p class="about-p">
+          Based in Okhaldhunga, Nepal 🇳🇵, I am a dedicated accountant and tech enthusiast who bridges traditional finance with modern Artificial Intelligence. With a strong foundation in accounting principles and hands-on experience in financial management, I specialize in building AI-driven tools that simplify complex financial processes for individuals, small businesses, and startups.
+        </p>
+      </div>
 
-<ul class="about-list">
-  <li>Artificial Intelligence & Machine Learning basics (via online platforms like Coursera, fast.ai, etc.)</li>
-  <li>Python programming for automation and data analysis</li>
-  <li>Digital tools & no-code/low-code platforms for financial solutions</li>
-  <li>Digital Marketing & content creation (to promote financial literacy)</li>
-</ul>
+      <div id="education" class="tab-pane">
+        <p class="about-p">
+          I hold a Bachelor's degree in <strong>[तिम्रो degree यहाँ लेख, जस्तै: Bachelor of Business Studies]</strong> from Tribhuvan University, where I developed a deep understanding of financial reporting, taxation, auditing, and business economics.
+        </p>
+        <p class="about-p">Complementing my formal education, I have pursued certifications and self-learning in:</p>
+        <ul class="about-list">
+          <li>Artificial Intelligence & Machine Learning basics (Coursera, fast.ai, etc.)</li>
+          <li>Python programming for automation and data analysis</li>
+          <li>Digital tools & no-code/low-code platforms for financial solutions</li>
+          <li>Digital Marketing & content creation</li>
+        </ul>
+      </div>
 
-<p class="about-p">
-  My professional journey includes [briefly mention experience, e.g., "working as an accountant/freelance financial consultant for X years, managing books for local businesses, preparing tax returns, and advising on EMI/loan structures"]. Passionate about Nepal's growing digital economy, I focus on creating accessible, affordable, and smart financial solutions — from interactive EMI calculators and amortization visualizers to fully automated AI bookkeeping engines that handle categorization, reconciliation, and reporting with minimal human input.
-</p>
+      <div id="experience" class="tab-pane">
+        <p class="about-p">
+          My professional journey includes [यहाँ तिम्रो experience छोटोमा लेख, जस्तै: "working as a freelance accountant for 3+ years, managing books for 40+ local businesses in Okhaldhunga and Kathmandu, preparing tax returns, and advising on EMI/loan structures"].
+        </p>
+        <p class="about-p">
+          Passionate about Nepal's growing digital economy, I focus on creating accessible, affordable, and smart financial solutions — from interactive EMI calculators to fully automated AI bookkeeping engines.
+        </p>
+      </div>
 
-<p class="about-p">
-  What drives me? Making finance less intimidating and more efficient for everyday Nepalis — whether it's a farmer calculating loan interest, a startup tracking expenses, or a freelancer managing cash flow. Living in the beautiful hills of Okhaldhunga keeps me grounded, while technology connects me to global opportunities.
-</p>
+      <div id="drive" class="tab-pane">
+        <p class="about-p">
+          What drives me? Making finance less intimidating and more efficient for everyday Nepalis — whether it's a farmer calculating loan interest, a startup tracking expenses, or a freelancer managing cash flow. Living in the beautiful hills of Okhaldhunga keeps me grounded, while technology connects me to global opportunities.
+        </p>
+        <p class="about-p">
+          I'm always open to collaborations, freelance projects, or discussions on AI + Finance innovations. 
+          <a href="#contact" style="color:var(--teal);text-decoration:underline;">Let's build something impactful together!</a>
+        </p>
+      </div>
+    </div>
 
-<p class="about-p">
-  I'm always open to collaborations, freelance projects, or discussions on AI + Finance innovations. Let's build something impactful together!
-</p>
-
-    
-    <a href="#contact" class="btn btn-fill" style="margin-top:18px;display:inline-flex;"><i class="fas fa-handshake"></i> Work With Me</a>
+    <a href="#contact" class="btn btn-fill" style="margin-top:28px;display:inline-flex;">
+      <i class="fas fa-handshake"></i> Work With Me
+    </a>
   </div>
+
+  
   <div class="stat-grid reveal" style="transition-delay:.15s">
     <div class="stat-box"><div class="stat-num">2+</div><div class="stat-lbl">AI Tools Built</div></div>
     <div class="stat-box"><div class="stat-num">∞</div><div class="stat-lbl">Finance Passion</div></div>
@@ -402,27 +494,22 @@ ham.onclick = () => { mobMenu.style.display = mobMenu.style.display === 'flex' ?
 const toggle = document.getElementById('chat-toggle'), xbtn = document.getElementById('chat-x'),
       box = document.getElementById('chatbox'), cinput = document.getElementById('cinput'),
       csend = document.getElementById('csend'), msgs = document.getElementById('messages');
-
 toggle.onclick = () => { box.style.display = box.style.display === 'flex' ? 'none' : 'flex'; if(box.style.display === 'flex') cinput.focus(); };
 xbtn.onclick = () => { box.style.display = 'none'; };
-
 async function sendMsg(){
   const text = cinput.value.trim(); if(!text) return;
   cinput.value = '';
   msgs.innerHTML += `<div class="msg user-msg">${text}</div>`;
   msgs.scrollTop = msgs.scrollHeight;
-
   const tid = 't' + Date.now();
   msgs.innerHTML += `<div class="msg bot-msg" id="${tid}">Kushal AI सोच्दै छ... <i class="fas fa-circle-notch fa-spin"></i></div>`;
   msgs.scrollTop = msgs.scrollHeight;
-
   try {
     const res = await fetch('https://morning-bush-8bd5.kushalphuyal.workers.dev/', {
       method: 'POST',
       headers: {'Content-Type': 'application/json'},
       body: JSON.stringify({message: text})
     });
-
     if(!res.ok) throw new Error('Server error');
     const reply = await res.text();
     document.getElementById(tid).innerHTML = reply.trim() || 'केही जवाफ आएन 😔';
@@ -431,9 +518,25 @@ async function sendMsg(){
   }
   msgs.scrollTop = msgs.scrollHeight;
 }
-
 csend.onclick = sendMsg;
 cinput.addEventListener('keypress', e => { if(e.key === 'Enter') sendMsg(); });
+
+// ================== ABOUT ME TABS JS ==================
+document.addEventListener('DOMContentLoaded', () => {
+  const buttons = document.querySelectorAll('.tab-btn');
+  const panes = document.querySelectorAll('.tab-pane');
+
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      buttons.forEach(b => b.classList.remove('active'));
+      panes.forEach(p => p.classList.remove('active'));
+      btn.classList.add('active');
+      document.getElementById(btn.dataset.tab).classList.add('active');
+    });
+  });
+
+  if (buttons.length > 0) buttons[0].click();
+});
 </script>
 </body>
 </html>
