--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <img src="images/profile.png" alt="Kushal Phuyal" />
     </div>
     <div class="socials reveal" style="transition-delay:.45s">
-       <a href="https://www.linkedin.com/in/kushalphuyal01" target="_blank"><i class="fab fa-linkdin-f"></i></a>
+       <a href="https://www.linkedin.com/in/kushalphuyal01" target="_blank"><i class="fab fa-linkdin"></i></a>
       <a href="https://facebook.com/kushalphuyal01" target="_blank"><i class="fab fa-facebook-f"></i></a>
       <a href="https://wa.me/9779863970493" target="_blank"><i class="fab fa-whatsapp"></i></a>
       <a href="https://tiktok.com/@kushalphuyal01" target="_blank"><i class="fab fa-tiktok"></i></a>
