--- a/index.html
+++ b/index.html
@@ -458,7 +458,9 @@
 
 <footer>
   <div class="foot-logo">KUSHAL.P</div>
-  <p>&copy; 2026 Kushal Phuyal. All rights reserved.</p>
+  <!-- Footer मा यो राख्नु -->
+<p>&copy; <script>document.write(new Date().getFullYear())</script> Kushal Phuyal. All rights reserved.</p>
+  
   <small>Crafted for Excellence in Finance & Tech</small>
 </footer>
 
