--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     .nav-right a:hover{color:white;background:var(--glass);}
     .nav-gallery{display:flex!important;align-items:center;gap:7px;background:var(--violet)!important;color:white!important;padding:8px 18px!important;border-radius:10px!important;margin-left:8px;}
     .nav-gallery:hover{background:var(--teal)!important;color:var(--ink)!important;}
+    
+    nav-blog{display:flex!important;align-items:center;gap:7px;background:var(--violet)!important;color:white!important;padding:8px 18px!important;border-radius:10px!important;margin-left:8px;}
+    .nav-blog:hover{background:var(--teal)!important;color:var(--ink)!important;}
 
     .hamburger{display:none;font-size:1.6rem;color:white;cursor:pointer;padding:8px;}
     .mobile-menu{position:fixed;top:68px;left:0;right:0;background:var(--deep);display:none;flex-direction:column;padding:20px 6%;gap:12px;z-index:800;border-top:1px solid var(--line);}
@@ -249,6 +252,7 @@
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
     <a href="photocollection.html" class="nav-gallery"><i class="fas fa-images"></i> Gallery</a>
+     <a href="blog.html" class="nav-blog"><i class="fas fa-blog"></i> blog</a>
   </div>
   <div class="hamburger" id="hamburger"><i class="fas fa-bars"></i></div>
 </nav>
@@ -258,6 +262,7 @@
   <a href="#projects">Projects</a>
   <a href="#contact">Contact</a>
   <a href="photocollection.html">Gallery</a>
+  <a href="blog.html">Blog</a>
 </div>
 
 <section class="hero">
