--- a/photocollection.html
+++ b/photocollection.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="robots" content="index, follow">
+<link rel="canonical" href="https://kushalphuyal.com.np/photocollection.html">
   <meta charset="UTF-8">
+   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kushal Photography Gallery – Kushal Phuyal</title>
-  <meta name="description" content="Kushal Phuyal को Photography Gallery – Nepal को nature, portrait, urban र travel photos। Okhaldhunga र अन्य ठाउँका सुन्दर दृश्यहरू।">
+  <title>Photography in Okhaldhunga Nepal | Kushal Phuyal Photo Collection</title>
+   <meta name="description" content="Explore photography from Okhaldhunga, Nepal by Kushal Phuyal. Nature, travel, portrait and urban photography capturing real moments of Nepal.">
+  
   <meta property="og:title" content="Kushal Photography Gallery">
   <meta property="og:description" content="Capturing moments from Nepal – Nature, Portrait, Urban & Travel photography by Kushal Phuyal.">
   <meta property="og:image" content="https://kushalphuyal.com.np/images/kushal1.jpg">
@@ -37,6 +40,20 @@
     .nav-back:hover{color:var(--teal);border-color:var(--teal);transform:translateX(-3px);}
 
     /* HERO */
+    
+    <section style="max-width:900px;margin:40px auto;color:#5a6080;font-size:15px;line-height:1.7;text-align:center;">
+<h2 style="display:none;">Photography in Okhaldhunga Nepal</h2>
+
+<p>
+This gallery showcases original photography captured in Okhaldhunga and other regions of Nepal by Kushal Phuyal.
+These photographs represent nature, rural lifestyle, travel moments and portrait documentation from real locations.
+</p>
+
+<p>
+All photos are taken and owned by Kushal Phuyal as part of his personal visual documentation project.
+</p>
+</section>
+
     .hero-header{padding:110px 6% 60px;position:relative;z-index:1;text-align:center;}
     .eyebrow{font-size:.72rem;font-weight:700;letter-spacing:.15em;text-transform:uppercase;
       color:var(--teal);display:inline-flex;align-items:center;gap:10px;margin-bottom:18px;}
