--- a/photocollection.html
+++ b/photocollection.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta name="robots" content="index, follow">
-<link rel="canonical" href="https://kushalphuyal.com.np/photocollection.html">
-  <meta charset="UTF-8">
-   
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photography in Okhaldhunga Nepal | Kushal Phuyal Photo Collection</title>
-   <meta name="description" content="Explore photography from Okhaldhunga, Nepal by Kushal Phuyal. Nature, travel, portrait and urban photography capturing real moments of Nepal.">
+<head>
   
+  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Photography in Okhaldhunga Nepal | Kushal Phuyal Photo Collection</title>
+  <meta name="description" content="Explore photography from Okhaldhunga, Nepal by Kushal Phuyal. Nature, travel, portrait and urban photography capturing real moments of Nepal.">
+
+  <link rel="canonical" href="https://kushalphuyal.com.np/photocollection.html">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Kushal Photography Gallery">
   <meta property="og:description" content="Capturing moments from Nepal – Nature, Portrait, Urban & Travel photography by Kushal Phuyal.">
   <meta property="og:image" content="https://kushalphuyal.com.np/images/kushal1.jpg">
   <meta property="og:url" content="https://kushalphuyal.com.np/photocollection.html">
+</head>
+  
+  
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
@@ -172,11 +180,16 @@
       .photo-item{margin-bottom:10px;}
       .hero-header{padding:90px 5% 44px;}
     }
+    .seo-heading{
+  position:absolute;
+  left:-9999px;
+}
   </style>
 </head>
 <body>
 <section style="max-width:900px;margin:40px auto;color:#5a6080;font-size:15px;line-height:1.7;text-align:center;">
-<h2 style="display:none;">Photography in Okhaldhunga Nepal</h2>
+
+<h2 class="seo-heading">Photography in Okhaldhunga Nepal</h2>
 
 <p>
 This gallery showcases original photography captured in Okhaldhunga and other regions of Nepal by Kushal Phuyal.
