--- a/photocollection.html
+++ b/photocollection.html
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Kushal Photography Gallery">
   <meta property="og:description" content="Capturing moments from Nepal – Nature, Portrait, Urban & Travel photography by Kushal Phuyal.">
-  <meta property="og:image" content="https://kushalphuyal.com.np/images/kushal1.jpg">
+  <meta property="og:image" content="https://kushalphuyal.com.np/images/kushal1.jpeg">
   <meta property="og:url" content="https://kushalphuyal.com.np/photocollection.html">
 
   
@@ -234,7 +234,7 @@ All photos are taken and owned by Kushal Phuyal as part of his personal visual d
 <div class="featured-wrap">
   <div class="featured-card" id="featuredCard">
     <span class="featured-badge"><i class="fas fa-star"></i> Featured</span>
-    <img src="images/kushal1.jpg" alt="Featured photography by Kushal Phuyal" id="featuredImg">
+    <img src="images/kushal1.jpeg" alt="Featured photography by Kushal Phuyal" id="featuredImg">
     <div class="featured-overlay">
       <h2>Featured Shot</h2>
       <p>Click to open in gallery</p>
@@ -281,12 +281,12 @@ All photos are taken and owned by Kushal Phuyal as part of his personal visual d
 </footer>
 
 <script>
-// PHOTO DATA — तिम्रो images/kushal1.jpg देखि kushal50.jpg सम्म auto load हुन्छ
+// PHOTO DATA — तिम्रो images/kushal1.jpeg देखि kushal50.jpeg सम्म auto load हुन्छ
 const allPhotos = [];
 for(let i = 1; i <= 50; i++){
   allPhotos.push({
-    src:   `images/kushal${i}.jpg`,
-    thumb: `images/kushal${i}.jpg`,  // यदि thumbnail छ भने अलग राख्न सकिन्छ, अहिले full image नै प्रयोग
+    src:   `images/kushal${i}.jpeg`,
+    thumb: `images/kushal${i}.jpeg`,  // यदि thumbnail छ भने अलग राख्न सकिन्छ, अहिले full image नै प्रयोग
     
     caption: `Photography in Okhaldhunga Nepal - Image ${i} by Kushal Phuyal`,
     category: ['nature','portrait','urban','travel'][(i-1) % 4]  // cycle मा category
