--- a/photocollection.html
+++ b/photocollection.html
@@ -281,15 +281,35 @@ All photos are taken and owned by Kushal Phuyal as part of his personal visual d
 </footer>
 
 <script>
-// PHOTO DATA — तिम्रो images/kushal1.jpeg देखि kushal50.jpeg सम्म auto load हुन्छ
+// PHOTO DATA (Manual Category Control)
 const allPhotos = [];
+
+// 👉 Certificate photos
+const certificatePhotos = [9,21,7,36,43,37,25,17,46,20,6,18];
+
+// 👉 Nature photos (edit if needed)
+const naturePhotos = [1,2,3,4,5,8,10,11,12,13,14,15];
+
+// 👉 Urban photos
+const urbanPhotos = [16,19,22,23,24,26,27,28,29,30];
+
+// 👉 Travel photos
+const travelPhotos = [31,32,33,34,35,38,39,40,41,42,44,45,47,48,49,50];
+
 for(let i = 1; i <= 50; i++){
+
+  let category = 'nature'; // default
+
+  if (certificatePhotos.includes(i)) category = 'certificate';
+  else if (urbanPhotos.includes(i)) category = 'urban';
+  else if (travelPhotos.includes(i)) category = 'travel';
+  else if (naturePhotos.includes(i)) category = 'nature';
+
   allPhotos.push({
     src:   `images/kushal${i}.jpeg`,
-    thumb: `images/kushal${i}.jpeg`,  // यदि thumbnail छ भने अलग राख्न सकिन्छ, अहिले full image नै प्रयोग
-    
+    thumb: `images/kushal${i}.jpeg`,
     caption: `Photography in Okhaldhunga Nepal - Image ${i} by Kushal Phuyal`,
-    category: ['nature','certificate','urban','travel'][(i-1) % 4]  // cycle मा category
+    category: category
   });
 }
 
